# template

./: .gitignore
.github/workflows/: release.yml
opengl/: CMakeLists.txt  README.md
opengl/include/: buffer.h  callback.h  glfwpointer.h  gui.h  material.h  mesh.h  opengl.h  parser.h  scene.h  shader.h  vertex.h
opengl/src/: buffer.cpp  callback.cpp  gui.cpp  main.cpp  material.cpp  mesh.cpp  parser.cpp  scene.cpp  shader.cpp
sfml/: CMakeLists.txt
sfml/src/: main.cpp
